--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bootstrap": "^5.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "json-server": "^0.17.3",
@@ -21,7 +22,11 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.67.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.7"
   }
 }
