--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bootstrap": "^5.3.2",
+    "cookie": "^0.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "json-server": "^0.17.3",
@@ -28,6 +29,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.2.7"
+    "@types/bootstrap": "^5.2.7",
+    "@types/cookie": "^0.5.2"
   }
 }
